assets/css/main.css
body {
    background-color: black;
    margin: 0;
    padding: 0;
}

* {
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
    outline: none !important;
} 

button {
    user-select: none;
}

/*Custom background div (for extra properties)*/

.background {
    background-size: cover;
    object-fit: none;
    filter: blur(10px);
    position: fixed;
    width: 100%;
    height: 100%;
    left: 0px;
    z-index: -1;
}

  /*Main div*/

.main {
    width: 100vw;
    height: 100vh;
    display: flex;
    overflow: hidden;
}

  /*Header*/

.header {
    background-color: var(--bg-primary);
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100vw;
    height: 75px;
    line-height: 75px;
    backdrop-filter: var(--blur);
    display: flex;
}

.header-icon {
    position: relative;
    height: 75px;
    min-width: 75px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
}

.header-icon i {
    font-size: 40px;
}

/* Window Buttons*/

.window-buttons {
    position: relative;
    background-color: var(--bg-secondary);
    position: relative;
    color: var(--text-secondary);
    border: none;
    height: 100%;
    min-width: 75px;
    max-width: 75px;
}

.window-buttons i {
    font-size: 40px;
}

.window-buttons:hover i {
    color: white;
}

/*Middle bar at top to drag the window*/

.drag-bar {
    margin-left: 0px;
    width: 100%;
    position: relative;
    -webkit-app-region: drag;
}

.drag-bar h1 {
    display: inline-block;
    vertical-align: middle;
    line-height: normal;
    user-select: none;
    color: white;
    font-family: vapor;
    -webkit-app-region: none;
}

/* Left navigationn bar */

.navbar {
    position: relative;
    background-color: var(--bg-primary);
    margin-top: 75px;
    height:  calc(100% - 75px);
    min-width: 75px;
    max-width: 75px;
    user-select: none;
    font-family: vapor;
    color: var(--text-secondary);
    backdrop-filter: var(--blur);
    transition:min-width .25s;
}

.navbar-nav {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-content: flex-start;
    justify-content: flex-start;
    flex-wrap: wrap;
    height: 100%;
}

.navbar:hover {
    min-width: 300px;
}

.navbar:hover .link-text  {
    display: block;
}

.navbar:hover .download-speed-counter{
    display: block;
}

.nav-item {
    position: relative;
    min-width: 100%;
    max-width: 100%;
    height: 75px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}


.nav-item:nth-last-child(2) {
    margin-top: auto;
}

.nav-item:hover {
    background-color: var(--bg-secondary);
}

.nav-icon {
   min-width: 75px;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-icon i {
    font-size: 65px;
}

.link-text {
    font-size: 30px;
    display: none;
}

  /* Progress bar */

.download-progress {
    min-width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
}

.progress-status {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    height: 100%;
    width: 100%;
    font-size: 22.5px;
}

.download-speed-counter {
    display: none;
}

/* Side pane (page contents) */

.side-pane {
    position: relative;
    float: right;
    top: 75px;
    height: calc(100% - 75px);
    width:  calc(100% - 75px);
    z-index: 1;
}

